--- a/.codechina-ci.yml
+++ b/.codechina-ci.yml
@@ -34,4 +34,5 @@ next:
     paths:
       - target/spring-boot-starter-gitee-*
   rules:
-    - if: $CI_COMMIT_TAG
+    # 仅用于发布非标签版本（一般为快照版）
+    - if: $CI_COMMIT_TAG == null
